--- a/standings.html
+++ b/standings.html
@@ -57,15 +57,15 @@
                                 <td class="postupuje">1.</td>
                                 <td class="logo"><img src="img/logo/bardejov.png" height="16"></td>
                                 <td class="club-name"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td>
+                                <td class="stats">12</td>
                                 <td class="stats">11</td>
-                                <td class="stats">11</td>
                                 <td class="stats">0</td>
+                                <td class="stats">1</td>
                                 <td class="stats">0</td>
-                                <td class="stats">0</td>
-                                <td class="stats">58:19</td>
-                                <td class="stats">39</td>
-                                <td class="stats"><strong>33</strong></td>
-                                <td class="forma"><img src="img/win.png" height="18"></td>
+                                <td class="stats">61:23</td>
+                                <td class="stats">34</td>
+                                <td class="stats"><strong>34</strong></td>
+                                <td class="forma"><img src="img/lose-pp.png" height="18"></td>
                                 <td class="forma"><img src="img/win.png" height="18"></td>
                                 <td class="forma"><img src="img/win.png" height="18"></td>
                             </tr>
@@ -89,17 +89,17 @@
                                 <td class="postupuje">3.</td>
                                 <td class="logo"><img src="img/logo/snv.png" height="16"></td>
                                 <td class="club-name"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=25632"style="color: black;">Spišská Nová Ves</a></td>
-                                <td class="stats">11</td>
+                                <td class="stats">12</td>
                                 <td class="stats">7</td>
-                                <td class="stats">0</td>
+                                <td class="stats">1</td>
                                 <td class="stats">0</td>
                                 <td class="stats">4</td>
-                                <td class="stats">53:38</td>
-                                <td class="stats">15</td>
-                                <td class="stats"><strong>21</strong></td>
+                                <td class="stats">57:41</td>
+                                <td class="stats">16</td>
+                                <td class="stats"><strong>23</strong></td>
+                                <td class="forma"><img src="img/win-pp.png" height="18"></td>
                                 <td class="forma"><img src="img/win.png" height="18"></td>
-                                <td class="forma"><img src="img/win.png" height="18"></td>
-                                <td class="forma"><img src="img/lose.png" height="18"></td>         
+                                <td class="forma"><img src="img/win.png" height="18"></td>         
                             </tr> 
                             <tr>
                                 <td class="postupuje">4.</td>
@@ -202,17 +202,17 @@
                                 <td class="nepostupuje">10.</td>
                                 <td class="logo"><img src="img/logo/hc_07_detva.png" height="16"></td>
                                 <td class="club-name"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=58552" style="color: black;">Detva</a></td>
-                                <td class="stats">10</td>
+                                <td class="stats">11</td>
                                 <td class="stats">4</td>
                                 <td class="stats">0</td>
                                 <td class="stats">1</td>
-                                <td class="stats">5</td>
-                                <td class="stats">32:37</td>
-                                <td class="stats">-5</td>
+                                <td class="stats">6</td>
+                                <td class="stats">33:40</td>
+                                <td class="stats">-7</td>
                                 <td class="stats"><strong>13</strong></td>
                                 <td class="forma"><img src="img/lose.png" height="18"></td>
-                                <td class="forma"><img src="img/win.png" height="18"></td>
-                                <td class="forma"><img src="img/lose-pp.png" height="18"></td> 
+                                <td class="forma"><img src="img/lose.png" height="18"></td>
+                                <td class="forma"><img src="img/win.png" height="18"></td> 
                             </tr> 
                             <tr>
                                 <td class="nepostupuje">11.</td>
@@ -267,15 +267,15 @@
                                 <td class="nepostupuje">14.</td>
                                 <td class="logo"><img src="img/logo/slovan.png" height="16"></td>
                                 <td class="club-name"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=37887" style="color: black;">Slovan Bratislava</a></td>
+                                <td class="stats">12</td>
+                                <td class="stats">1</td>
+                                <td class="stats">0</td>
+                                <td class="stats">0</td>
                                 <td class="stats">11</td>
-                                <td class="stats">0</td>
-                                <td class="stats">0</td>
-                                <td class="stats">0</td>
-                                <td class="stats">11</td>
-                                <td class="stats">13:54</td>
-                                <td class="stats">-41</td>
-                                <td class="stats"><strong>0</strong></td>
-                                <td class="forma"><img src="img/lose.png" height="18"></td>
+                                <td class="stats">16:55</td>
+                                <td class="stats">-39</td>
+                                <td class="stats"><strong>3</strong></td>
+                                <td class="forma"><img src="img/win.png" height="18"></td>
                                 <td class="forma"><img src="img/lose.png" height="18"></td>
                                 <td class="forma"><img src="img/lose.png" height="18"></td>
                             </tr>
