--- a/halloffame.html
+++ b/halloffame.html
@@ -78,7 +78,7 @@
             <tr>
                 <td>Tipsport Liga &nbsp;&nbsp;&nbsp; 2.Sezóna</td>
                 <td></td>
-                <td></td>
+                <td><img src="img/logo/bardejov.png" height="18"> HK Bardejov</td>
                
             </tr>
             <tr>
