--- a/playoff.html
+++ b/playoff.html
@@ -74,21 +74,21 @@
              </tr>
       </tbody>
   </table>
-
+                    <!-- KTO POSTUPI VYPLNIT FARBOU => style="background-color: rgb(218,165,32, 0.8);"-->
      <img class="pohar-tp-playoff" src="img/pohar_dzurilla.png" height="250" style="opacity: 0.7; margin-top: 40px;">
     <div class="split split-one">
         <div class="round round-one current">
-            <div class="round-details">Štvrťfinále<br/><span class="date"></span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
+            <div class="round-details">Štvrťfinále<br/><span class="date">26.9 | 27.9</span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
             <ul class="matchup">
-                <li class="team team-top"><img src="img/logo/bardejov.png" height="20"> Bardejov<span class="score"></span></li>
-                <li class="team team-bottom" style="/*background-color: rgb(218,165,32, 0.8);*/"><span class="score"></span></li>
+                <li class="team team-top"><img src="img/logo/bardejov.png" height="20"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a>  <span class="score"></span></li>
+                <li class="team team-bottom" ><span class="score"></span></li>
             </ul>
             <ul class="matchup">
                 <li class="team team-top"><span class="score"></span></li>
                 <li class="team team-bottom"><span class="score"></span></li>
             </ul>
             <ul class="matchup">
-                <li class="team team-top"><img src="img/logo/hk_poprad.png" height="20"> Poprad<span class="score"></span></li>
+                <li class="team team-top"><img src="img/logo/hk_poprad.png" height="20"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=7347" style="color: black;">Poprad</a><span class="score"></span></li>
                 <li class="team team-bottom"><span class="score"></span></li>
             </ul>
             <ul class="matchup">
@@ -98,7 +98,7 @@
                                                
         </div>  <!-- END ROUND QUATER -->
 
-        <div class="round round-two current"> <!-- DOPISAT "CURRENT" ZA ROUND-TWO --> 
+        <div class="round round-two "> <!-- DOPISAT "CURRENT" ZA ROUND-TWO --> 
             <div class="round-details">Semifinále<br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
             <ul class="matchup">
                 <li class="team team-top"><span class="score"></span></li>
@@ -112,8 +112,8 @@
         </div>  <!-- END ROUND SEMI -->
 </div> 
 
-<div class="champion current">
-         <div class="final" >
+<div class="champion ">
+         <div class="final" > <!-- DOPISAT "CURRENT" ZA ROUND-TWO --> 
             <i class="fa fa-trophy"></i>
             <div class="round-details">Finále <br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->     
             <ul class ="matchup championship">
@@ -133,254 +133,8 @@
 </section>
 
 
-<div class="zapasy-play-off" align="center">
-        <table class="tabulka-zapasov-playoff">
-            <thead>
-                <th></th>
-                <th colspan="3" style="font-size: 18px;">Finále</th>               
-            </thead>
-            <thead>
-                <th>Dátum</th>
-                <th style="width: 180px;">Doma</th>
-                <th>Výsledok</th>
-                <th style="width: 180px;">Vonku</th>
-            </thead>
-            <tbody>
-               <tr id="spodnahranica-zapasy">
-                    <td class="datum-playoff"></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                    <td class="vysledok"><b></b></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                </tr>
-                <tr id="spodnahranica-zapasy">
-                    <td class="datum-playoff"></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                    <td class="vysledok"><b></b></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                </tr>
-               <tr id="spodnahranica-zapasy">
-                    <td class="datum-playoff"></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                    <td class="vysledok"><b></b></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                </tr>
-            </tbody>
-        </table>
 
 
-        <table class="tabulka-zapasov-playoff">
-            <thead>
-                <th></th>
-                <th colspan="3" style="font-size: 18px;">3.miesto</th>               
-            </thead>
-            <thead>
-                <th>Dátum</th>
-                <th style="width: 180px;">Doma</th>
-                <th>Výsledok</th>
-                <th style="width: 180px;">Vonku</th>
-            </thead>
-            <tbody>
-                <tr id="spodnahranica-zapasy">
-                    <td class="datum-playoff"></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                    <td class="vysledok"><b></b></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                </tr>
-               <tr id="spodnahranica-zapasy">
-                    <td class="datum-playoff"></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                    <td class="vysledok"><b></b></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                </tr>
-               <tr id="spodnahranica-zapasy">
-                    <td class="datum-playoff"></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                    <td class="vysledok"><b></b></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                </tr>
-            </tbody>
-        </table>
-
-
-
-        <table class="tabulka-zapasov-playoff">
-            <thead>
-                <th></th>
-                <th colspan="3" style="font-size: 18px;">Semifinále</th>               
-            </thead>
-            <thead>
-                <th>Dátum</th>
-                <th style="width: 180px;">Doma</th>
-                <th>Výsledok</th>
-                <th style="width: 180px;">Vonku</th>
-            </thead>
-            <tbody>
-                <tr id="spodnahranica-zapasy">
-                    <td class="datum-playoff"></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                    <td class="vysledok"><b></b></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                </tr>
-                <tr id="spodnahranica-zapasy">
-                    <td class="datum-playoff"></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                    <td class="vysledok"><b></b></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                </tr>
-                <tr id="spodnahranica-zapasy">
-                    <td class="datum-playoff"></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                    <td class="vysledok"><b></b></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                </tr>
-
-
-                <tr id="spodnahranica-zapasy">
-                    <td class="datum-playoff"></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                    <td class="vysledok"><b></b></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                </tr>
-                 <tr id="spodnahranica-zapasy">
-                    <td class="datum-playoff"></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                    <td class="vysledok"><b></b></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                </tr>
-                 <tr id="spodnahranica-zapasy">
-                    <td class="datum-playoff"></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                    <td class="vysledok"><b></b></td>
-                    <td><img class="logo-playoff" src=""height="15"></td>
-                </tr>
-            </tbody>
-        </table>
-
-
-
-        <table class="tabulka-zapasov-playoff" >
-            <thead>
-                <th></th>
-                <th colspan="3">Štvrťfinále</th>               
-            </thead>
-            <thead>
-                <th>Dátum</th>
-                <th style="width: 180px;">Doma</th>
-                <th>Výsledok</th>
-                <th style="width: 180px;">Vonku</th>
-            </thead>
-            <tbody>
-                <tr>
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
-                </tr>
-                 <tr class="posledny-zapas">
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
-                </tr>
-
-
-                <tr>
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
-                </tr>
-               <tr class="posledny-zapas">
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
-                </tr>
-
-                <tr>
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
-                </tr>
-                <tr class="posledny-zapas">
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
-                </tr>
-
-
-               <tr>
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-</div>
-
-<style type="text/css">
-.zapasy-play-off{
-    height: 600px;
-    padding-top: 50px;
-
-}
-.datum-playoff th{
-    width: 50px;
-    background-color: red;
-}
-.tabulka-zapasov-playoff th{
-    background-color: #E4721F;
-    width: 150px;
-    text-align: center;
-}
-.vysledok{
-    text-align: center;
-}
-.datum-playoff{
-    text-align: center;
-}
-.posledny-zapas{
-    border-bottom: 3px solid #E4721F;
-}
-#hide{
-    display: none;
-}
-#spodnahranica-zapasy{
-    border-bottom: 1px solid #ffb985;
-}
 
 </style>
 
