--- a/playoff.html
+++ b/playoff.html
@@ -80,15 +80,21 @@
         <div class="round round-one current">
             <div class="round-details">Štvrťfinále<br/><span class="date">26.9 | 27.9</span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
             <ul class="matchup">
-                <li class="team team-top"><img src="img/logo/bardejov.png" height="20"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a>  <span class="score"></span></li>
-                <li class="team team-bottom" ><span class="score"></span></li>
+                <li class="team team-top"><img src="img/logo/bardejov.png" height="18"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a> 
+                     
+                    <span class="score">1</span>
+                </li>
+                <li class="team team-bottom" >
+                  
+                    <span class="score"></span>
+                </li>
             </ul>
             <ul class="matchup">
                 <li class="team team-top"><span class="score"></span></li>
                 <li class="team team-bottom"><span class="score"></span></li>
             </ul>
             <ul class="matchup">
-                <li class="team team-top"><img src="img/logo/hk_poprad.png" height="20"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=7347" style="color: black;">Poprad</a><span class="score"></span></li>
+                <li class="team team-top"><img src="img/logo/hk_poprad.png" height="18"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=7347" style="color: black;">Poprad</a><span class="score"></span></li>
                 <li class="team team-bottom"><span class="score"></span></li>
             </ul>
             <ul class="matchup">
