--- a/playoff.html
+++ b/playoff.html
@@ -82,7 +82,7 @@
             <ul class="matchup">
                 <li class="team team-top"><img src="img/logo/bardejov.png" height="18"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a> 
                      
-                    <span class="score">1</span>
+                    <span class="score"></span>
                 </li>
                 <li class="team team-bottom" >
                   
