--- a/playoff.html
+++ b/playoff.html
@@ -74,27 +74,25 @@
              </tr>
       </tbody>
   </table>
-                    <!-- KTO POSTUPI VYPLNIT FARBOU => style="background-color: rgb(218,165,32, 0.8);"-->
+    <!-- KTO POSTUPI VYPLNIT FARBOU => style="background-color: rgb(218,165,32, 0.8);"-->
      <img class="pohar-tp-playoff" src="img/pohar_dzurilla.png" height="250" style="opacity: 0.7; margin-top: 40px;">
     <div class="split split-one">
         <div class="round round-one current">
             <div class="round-details">Štvrťfinále<br/><span class="date">26.9 | 27.9</span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
             <ul class="matchup">
-                <li class="team team-top"><img src="img/logo/bardejov.png" height="18"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a> 
-                     
-                    <span class="score"></span>
-                </li>
+                <li class="team team-top"><img src="img/logo/bardejov.png" height="18"> Bardejov 
+                    <span style="padding-left: 70px;"></span>
+                    <span class="score" style="background-color:;"></span></li>
                 <li class="team team-bottom" >
-                  
-                    <span class="score"></span>
-                </li>
+                    <span style="padding-left: 21px;"></span>
+                    <span class="score"></span></li>
             </ul>
             <ul class="matchup">
                 <li class="team team-top"><span class="score"></span></li>
                 <li class="team team-bottom"><span class="score"></span></li>
             </ul>
             <ul class="matchup">
-                <li class="team team-top"><img src="img/logo/hk_poprad.png" height="18"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=7347" style="color: black;">Poprad</a><span class="score"></span></li>
+                <li class="team team-top"><img src="img/logo/hk_poprad.png" height="18"> Poprad<span class="score"></span></li>
                 <li class="team team-bottom"><span class="score"></span></li>
             </ul>
             <ul class="matchup">
