--- a/playoff.html
+++ b/playoff.html
@@ -74,17 +74,17 @@
              </tr>
       </tbody>
   </table>
-    <!-- KTO POSTUPI VYPLNIT FARBOU => style="background-color: rgb(218,165,32, 0.8);"-->
+    <!-- MAJSTROVI => style="background-color: rgb(218,165,32, 0.8);"-->
      <img class="pohar-tp-playoff" src="img/pohar_dzurilla.png" height="250" style="opacity: 0.7; margin-top: 40px;">
     <div class="split split-one">
         <div class="round round-one current">
             <div class="round-details">Štvrťfinále<br/><span class="date">26.9 | 27.9</span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
             <ul class="matchup">
-                <li class="team team-top"><img src="img/logo/bardejov.png" height="18"> Bardejov 
-                    <span style="padding-left: 70px;"></span>
-                    <span class="score" style="background-color:;"></span></li>
+                <li class="team team-top" style="background-color:#c52431;"><img src="img/logo/bardejov.png" height="18"> <b style="color: white">Bardejov</b> 
+                    <span class="stav-serie" style="padding-left: 70px;"></span>
+                    <span class="score"></span></li>
                 <li class="team team-bottom" >
-                    <span style="padding-left: 21px;"></span>
+                    <span class="stav-serie" style="padding-left:"></span>
                     <span class="score"></span></li>
             </ul>
             <ul class="matchup">
@@ -92,8 +92,12 @@
                 <li class="team team-bottom"><span class="score"></span></li>
             </ul>
             <ul class="matchup">
-                <li class="team team-top"><img src="img/logo/hk_poprad.png" height="18"> Poprad<span class="score"></span></li>
-                <li class="team team-bottom"><span class="score"></span></li>
+                <li class="team team-top" style="background-color:#01245E;"><img src="img/logo/hk_poprad.png" height="18"> <b style="color: white">Poprad</b> 
+                    <span class="stav-serie" style="padding-left: 70px;"></span>
+                    <span class="score"></span></li>
+                <li class="team team-bottom" >
+                    <span class="stav-serie" style="padding-left:"></span>
+                    <span class="score"></span></li>
             </ul>
             <ul class="matchup">
                 <li class="team team-top"><span class="score"></span></li>
