--- a/playoff.html
+++ b/playoff.html
@@ -78,7 +78,7 @@
      <img class="pohar-tp-playoff" src="img/pohar_dzurilla.png" height="250" style="opacity: 0.7; margin-top: 40px;">
     <div class="split split-one">
         <div class="round round-one current">
-            <div class="round-details">Štvrťfinále<br/><span class="date">23.9 | 26.9 | 27.9</span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
+            <div class="round-details">Štvrťfinále<br/><span class="date">20.9 | 23.9 | 26.9 | 27.9</span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
             <ul class="matchup">
                 <li class="team team-top" style="background-color:#c52431;"><img src="img/logo/bardejov.png" height="18"> <b style="color: white">Bardejov</b> 
                     <span class="stav-serie" style="padding-left: 70px;"></span>
@@ -107,7 +107,7 @@
         </div>  <!-- END ROUND QUATER -->
 
         <div class="round round-two "> <!-- DOPISAT "CURRENT" ZA ROUND-TWO --> 
-            <div class="round-details">Semifinále<br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
+            <div class="round-details">Semifinále<br/><span class="date">30.9 | 3.10 | 4.10</span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
             <ul class="matchup">
                 <li class="team team-top"><span class="score"></span></li>
                 <li class="team team-bottom"><span class="score"></span></li>
