--- a/playoff.html
+++ b/playoff.html
@@ -107,7 +107,7 @@
         </div>  <!-- END ROUND QUATER -->
 
         <div class="round round-two "> <!-- DOPISAT "CURRENT" ZA ROUND-TWO --> 
-            <div class="round-details">Semifinále<br/><span class="date">30.9 | 3.10 | 4.10</span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
+            <div class="round-details">Semifinále<br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
             <ul class="matchup">
                 <li class="team team-top"><span class="score"></span></li>
                 <li class="team team-bottom"><span class="score"></span></li>
