--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div style=" display: block; padding-left: 50px;">
             <h1 style="text-transform: uppercase; color: black; padding-top: 250px;"><img src="img/logo/bardejov.png" height="100"></h1>
             <h3 style="text-transform: uppercase; color: black;"> Očakávania sa naplnili a Bardejov získava <strong>pohár</strong>  <span style="color: #4285f4"> <strong>Dušana Pašeka</strong></span></h3>
-            <h4> <strong>V diskusii bude prebiehať prihlasovačka na další ročník tak kto chce hrať nech sa tam zapíše prosím!!!!</strong> </h4>
+            
         </div>    
     </article>
 </div>
@@ -149,8 +149,10 @@
    <div class="clanky-mobil" style="">
     <div  align="center"><img class="mobile-responsive-img" src="img/tasr-puk-tipsport-liga.jpg" height="300" width="500"></div>
     <span class="news">News</span>
-       <p class="article-title">11.kolo za nami📢</p>
-       <h4>Po 11.kole je boj o postupové priečky stále v plnom prúde. Bardejov a Poprad si môžu vydýchnúť pred play-off, pretože ich miestenky z prvých dvoch miest im už nemôže nik vziať. Naopak boj o 3. až 8. miesto je veľmi napínavý. V hre sú dokonca aj tímy mimo postupových priečok, ktoré majú šancu atakovať na 7. a 8. priečku. Horúci adept o udržanie sa v play-off sú aj HC Košice, ktoré nezažívajú najlepšiu sezónu ale vedenie a manažér klubu veria, že sa dostanú do play-off kde by mohli ešte zamiešať karty. Veľký zálusk si na play-off robí aj Detva či Žilina, ktoré majú ťažký žreb posledného dvojkola. Obe celky hrajú totiž proti Košiciam. Zdá sa, že tieto zápasy asi rozhodnú o budúcnosti play-off. Vo väčšom ohrození je taktiež aj Skalica, ktorá má v poslednom kole Banskú Bystricu. Nenápadné Piešťany, ktoré na poslednú chvíľu zastúpili Trenčín by si chceli tiež uchmatnúť postupovú priečku, žiaľ po sobotnajšej prehre s Košicami sa im boj pekne sťažil. Dnes si musia poradiť s Popradom ak chcú pomýšľať o postupe do play-off. Všetko je otvorené a my sa tešíme na posledné dva kola základnej časti.</h4>
+       <p class="article-title">Info o play-off a ďalšej sezóne!📢</p>
+       <h4>Čo sa týka play-off som sa rozhodol byť troška <strong>nekompromisný</strong> aby nevznikali problémy ako prvú sezónu. Čo to znamená pre vás? Ak sa nestihnú odohrať zápasy vo vopred vypísaných hracích dátumoch tak sa to bude ďalej riešiť už len kontumačne a nebude sa jedna séria naťahovať na viac potrebných dní ako bude treba. Jednoducho treba byť aktívny ak sa chceme stratávať v tomto turnaji spoločne. Ak niekto nie je aktívny ale aspoň dodržuje pravidlá a nerobí problémy tak je to fajn. Ale ak nedodržuje ani jedno z toho jednoducho bude vylúčený. 
+        <br> 
+       Ďalej, v diskusii bude prebiehať prihlasovačka na další ročník, tak kto chce hrať nech sa tam zapíše prosím!!!! <strong>PRIHLASOVAČKA BUDE TRVAŤ DO KONCA SEPTEMBRA</strong> ( 30.9.2020 ). Ak sa po uvedenom dátume na prihlasovacej listine nebudú nachádzať terajší manažéri, tak budu vyradený z nasledujúcej sezóny a pripravia sa tak o šancu hrať v turnaji. Myslím, že času na to máte dosť a dúfam, že sa tam zapíšete všetci :)</h4>
    </div> 
        
  </div> 
