--- a/standings.html
+++ b/standings.html
@@ -31,7 +31,7 @@
 </header>   
 
 <div id="standings">
-    <h4 align="center" style="color: white"> <strong>V diskusii bude prebiehať prihlasovačka na další ročník tak kto chce hrať nech sa tam zapíše prosím!!!!</strong> </h4>
+    <h4 align="center" style="color: white"> <strong>V diskusii bude prebiehať prihlasovačka na další ročník tak kto chce hrať nech sa tam zapíše prosím!!!! PRIHLASOVAČKA BUDE TRVAŤ DO KONCA SEPTEMBRA!!! 30.9.2020</strong> </h4>
     <p id="standings-p">Tabuľka</p>
 
         <div class="table" align="center">
