--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
     </div>    
     <article class="clanok-uvod">
         <div style=" display: block; padding-left: 50px;">
-            <h1 style="text-transform: uppercase; color: black; padding-top: 250px;"><img src="img/logo/bardejov.png" height="100"></h1>
-            <h3 style="text-transform: uppercase; color: black;"> Očakávania sa naplnili a Bardejov získava <strong>pohár</strong>  <span style="color: #4285f4"> <strong>Dušana Pašeka</strong></span></h3>
+            <h1 style="text-transform: uppercase; color: black; padding-top: 100px;"><img src="img/logo/bardejov.png" height="100"></h1>
+            <h3 style="text-transform: uppercase; color: black;"> Očakávania sa naplnili a Bardejov získava <strong>pohár</strong>  <span style="color: #4285f4"> <strong>Dušana Pašeka</strong></span> </h3>
+            <h3 style="text-transform: uppercase; color: black; font-size: 28px;">GRATULUJEME!!</h3>
+            <h3 style="padding-top: 130px;"><strong>Prečítaj si poriadne novinky ohľadom play-off a prihlasovačky do ďalšieho ročníka, ktoré sú uvedené nižšie ⬇️</strong></h3>
             
         </div>    
     </article>
