--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
        <h4>Čo sa týka play-off som sa rozhodol byť troška <strong>nekompromisný</strong> aby nevznikali problémy ako prvú sezónu. Čo to znamená pre vás? Ak sa nestihnú odohrať zápasy vo vopred vypísaných hracích dátumoch tak sa to bude ďalej riešiť už len kontumačne a nebude sa jedna séria naťahovať na viac potrebných dní ako bude potreba. Jednoducho treba byť aktívny ak sa chceme stretávať v tomto turnaji spoločne. Ak niekto nie je aktívny ale aspoň dodržuje pravidlá a nerobí problémy tak je to fajn. Ale ak nedodržuje ani jedno z toho jednoducho bude vylúčený. 
         <br>
         <br> 
-       Ďalej, v diskusii bude prebiehať prihlasovačka na další ročník, tak kto chce hrať nech sa tam zapíše prosím!!!! <strong>PRIHLASOVAČKA BUDE TRVAŤ DO KONCA SEPTEMBRA</strong> ( 30.9.2020 ). Ak sa po uvedenom dátume na prihlasovacej listine nebudú nachádzať terajší manažéri, tak budu vyradený z nasledujúcej sezóny a pripravia sa tak o šancu hrať v turnaji a budú nahradený niekým iným poprípade sa pôjde s menším počtom (niekedy je menej viac).Myslím, že času na to máte dosť a dúfam, že sa tam zapíšete všetci :)</h4>
+       Ďalej, v diskusii bude prebiehať prihlasovačka na další ročník, tak kto chce hrať nech sa tam zapíše prosím!!!! <strong style="color: red">PRIHLASOVAČKA BUDE TRVAŤ DO KONCA SEPTEMBRA</strong> ( 30.9.2020 ). Ak sa po uvedenom dátume na prihlasovacej listine nebudú nachádzať terajší manažéri, tak budu vyradený z nasledujúcej sezóny a pripravia sa tak o šancu hrať v turnaji a budú nahradený niekým iným poprípade sa pôjde s menším počtom (niekedy je menej viac).Myslím, že času na to máte dosť a dúfam, že sa tam zapíšete všetci :)</h4>
    </div> 
        
  </div> 
