--- a/playoff.html
+++ b/playoff.html
@@ -88,8 +88,8 @@
                     <span class="score"></span></li>
             </ul>
             <ul class="matchup">
-                <li class="team team-top"><span class="score"></span></li>
-                <li class="team team-bottom"><span class="score"></span></li>
+                <li class="team team-top" style="background-color: #00aeef;"><img src="img/logo/hk_nitra.png" height="18"> <b style="color: white">Nitra</b><span class="score"></span></li>
+                <li class="team team-bottom" style="background-color: #0F2648;"><img src="img/logo/hk_spisská_nová_ves.png" height="18"> <b style="color: white">Spišská Nová Ves</b> <span class="score"></span></li>
             </ul>
             <ul class="matchup">
                 <li class="team team-top" style="background-color:#01245E;"><img src="img/logo/hk_poprad.png" height="18"> <b style="color: white">Poprad</b> 
@@ -100,7 +100,7 @@
                     <span class="score"></span></li>
             </ul>
             <ul class="matchup">
-                <li class="team team-top"><span class="score"></span></li>
+                <li class="team team-top" style="background-color: #A90000;"><img src="img/logo/hc_05_banská_bystrica.png" height="18"> <b style="color: white">Banská Bystrica</b><span class="score"></span></li>
                 <li class="team team-bottom"><span class="score"></span></li>
             </ul>           
                                                
