--- a/playoff.html
+++ b/playoff.html
@@ -83,7 +83,7 @@
                 <li class="team team-top" style="background-color:#c52431;"><img src="img/logo/bardejov.png" height="18"> <b style="color: white">Bardejov</b> 
                     <span class="stav-serie" style="padding-left: 70px;"></span>
                     <span class="score"></span></li>
-                <li class="team team-bottom" >
+                <li class="team team-bottom" style="background-color:#0052B2;"><img src="img/logo/hc_kosice.png" height="18"> <b style="color: white">Košice</b>
                     <span class="stav-serie" style="padding-left:"></span>
                     <span class="score"></span></li>
             </ul>
@@ -95,13 +95,15 @@
                 <li class="team team-top" style="background-color:#01245E;"><img src="img/logo/hk_poprad.png" height="18"> <b style="color: white">Poprad</b> 
                     <span class="stav-serie" style="padding-left: 70px;"></span>
                     <span class="score"></span></li>
-                <li class="team team-bottom" >
+                <li class="team team-bottom" style="background-color:#00985B;"><img src="img/logo/Skalica.png" height="18"> <b style="color: white">Skalica</b>
                     <span class="stav-serie" style="padding-left:"></span>
                     <span class="score"></span></li>
             </ul>
             <ul class="matchup">
                 <li class="team team-top" style="background-color: #A90000;"><img src="img/logo/hc_05_banská_bystrica.png" height="18"> <b style="color: white">Banská Bystrica</b><span class="score"></span></li>
-                <li class="team team-bottom"><span class="score"></span></li>
+                <li class="team team-bottom" style="background-color:#F58220;"><img src="img/logo/hk_dukla_michalovce.png" height="18"> <b style="color: white">Michalovce</b>
+                    <span class="stav-serie" style="padding-left:"></span>
+                    <span class="score"></span></li>
             </ul>           
                                                
         </div>  <!-- END ROUND QUATER -->
